send message to content.js

--- a/popup.html
+++ b/popup.html
@@ -1,14 +1,15 @@
 <html>
     <head>
         <title>Images Crawler</title>
+
 		<script src="FileSaver.min.js"></script>
 		<script src="jszip-utils.min.js"></script>
-		<script src="jszip.min.js"></script>
+		<script src="jszip.min.js"></script>		
 		
         <script src="popup.js"></script>
 		<style type="text/css">	
 			#offerId {font-weight: 400; font-size: 14px}
-			img{
+			video, img{
 				border: dashed 1px #ccc;
 				padding: 4px;
 				margin-bottom: 10px;
@@ -19,6 +20,7 @@
     <body>
 		<center>
 			<label id="offerId"></label>
+			<label id="xxx"></label>
 			<br />
 			<br />
 			<button id="btnZip">Zip Images</button>
