--- a/popup.html
+++ b/popup.html
@@ -2,9 +2,9 @@
     <head>
         <title>Images Crawler</title>
 
-		<script src="FileSaver.min.js"></script>
-		<script src="jszip-utils.min.js"></script>
-		<script src="jszip.min.js"></script>		
+		<script src="scripts/FileSaver.min.js"></script>
+		<script src="scripts/jszip-utils.min.js"></script>
+		<script src="scripts/jszip.min.js"></script>		
 		
         <script src="popup.js"></script>
 		<style type="text/css">	
@@ -20,7 +20,6 @@
     <body>
 		<center>
 			<label id="offerId"></label>
-			<label id="xxx"></label>
 			<br />
 			<br />
 			<button id="btnZip">Zip Images</button>
