--- a/popup.html
+++ b/popup.html
@@ -15,14 +15,17 @@
 				margin-bottom: 10px;
 				width: 500px;
 			}
+			#btnZip{
+				font-size: 16px;
+			}
 		</style>
     </head>
-    <body>
+    <body style="min-width: 300px">
 		<center>
 			<label id="offerId"></label>
 			<br />
 			<br />
-			<button id="btnZip">Zip Images</button>
+			<button id="btnZip" style="display: none">Zip Images</button>
 		</center>
 		<br />
         <div id="sources"></div>    
